anac me added head and title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
-  <body>
-  </body>
+    <head>
+        <title>ttttttttttt</title>
+    </head>
+
+    <body>
+        aaaaaaaaaaaaaaaaaaa
+    </body>
 </html>
