--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <body>
         <h1>aaaaaaaaaaaaaaaaaaa</h1>
         <img src="https://avatars1.githubusercontent.com/u/25191474?v=4"/>
+        
+        <ol>
+            <li>This</li>
+            <li>Is an</li>
+            <li>Ordered list</li>
+        </ol>
     </body>
 </html>
