--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <img src="https://avatars1.githubusercontent.com/u/25191474?v=4"/>
         
         <ol>
-            <li>This</li>
-            <li>Is an</li>
-            <li>Ordered list</li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>  
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
         </ol>
     </body>
 </html>
