--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-        <title>ttttttttttt</title>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-
+    
     <body>
         <h1>aaaaaaaaaaaaaaaaaaa</h1>
         <img src="https://avatars1.githubusercontent.com/u/25191474?v=4"/>
